Use site.url for CSS

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,9 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link href="/css/screen.css" rel="stylesheet">
-    <link href="http://fonts.googleapis.com/css?family=Bitter"
-          rel="stylesheet" type="text/css">
+    <link href="{{ site.url }}/css/screen.css" rel="stylesheet">
     <title>{{ page.title || "Jon-Michael Deldin" }}</title>
   </head>
   <body>
