Let's see if baseurl works for gh-pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link href="{{ site.url }}/css/screen.css" rel="stylesheet">
+    <link href="{{ site.baseurl }}/css/screen.css" rel="stylesheet">
     <title>{{ page.title || "Jon-Michael Deldin" }}</title>
   </head>
   <body>
