Fix a double-slash

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link href="{{ site.baseurl }}/css/screen.css" rel="stylesheet">
     <title>{{ page.title || "Jon-Michael Deldin" }}</title>
+    <link href="{{ site.baseurl }}css/screen.css" rel="stylesheet">
   </head>
   <body>
     <div class="wrap">
