Move CSS to `assets` dir

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{{ page.title || "Jon-Michael Deldin" }}</title>
-    <link href="{{ site.baseurl }}css/screen.css" rel="stylesheet">
+    <link href="{{ site.baseurl }}assets/css/screen.css" rel="stylesheet">
+    <title>{{ page.title }}</title>
   </head>
   <body>
     <div class="wrap">
