--- a/assets/css/scss/screen.scss
+++ b/assets/css/scss/screen.scss
@@ -15,7 +15,7 @@ $linkHover: #e74c3c;
 }
 
 html {
-    background: url(img/subtle_dots.png) repeat;
+    background: url(../img/subtle_dots.png) repeat;
 }
 
 body {
