Add NLP project and update tagline

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
         <div id="logo">
           <a href="/" >
             <h1>Jon-Michael Deldin</h1>
-            <p id="tagline">Master&#8217;s in Computer Science Portfolio</p>
+            <p id="tagline">Graduate Computer Science Portfolio</p>
           </a>
         </div>
 
