--- a/assets/css/scss/screen.scss
+++ b/assets/css/scss/screen.scss
@@ -202,3 +202,14 @@ footer {
     color: #666;
     font-size: 0.8em;
 }
+
+//
+// figures
+//
+figure {
+    margin: 0 0 1em;
+}
+
+figcaption {
+    font-size: 0.8em;
+}
