--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="{{ site.baseurl }}assets/css/screen.css" rel="stylesheet">
+    <script src="//use.edgefonts.net/source-sans-pro:n3,i3,n4,i4,n7,i7.js"></script>
     <title>{{ page.title }}</title>
   </head>
   <body>
