--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -109,10 +109,10 @@ html {
 body {
   border-bottom: 3px solid #eee;
   background: white;
+  box-sizing: content-box;
   color: #333;
-  font: 16px/1 "SourceSansPro-Regular", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0 auto;
-  box-sizing: content-box; }
+  font: 16px/1 source-sans-pro, "Source Sans Pro", Helvetica, Arial, sans-serif;
+  margin: 0 auto; }
   @media (min-width: 900px) {
     body {
       width: 850px; } }
@@ -121,11 +121,15 @@ body {
   padding: 0 0.75em; }
 
 h1 {
-  font: 2.95em/1 "SourceSansPro-Bold", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 2.95em;
+  font-weight: 700;
+  line-height: 1;
   text-shadow: #fff 0px 0px 1px; }
 
 h2, header[role=banner] #logo #tagline {
-  font: 1.6em/1 "SourceSansPro-Light", "Helvetica Neue", Helvetica, Arial, sans-serif; }
+  font-size: 1.6em;
+  font-weight: 300;
+  line-height: 1; }
 
 h3 {
   font-size: 1.3em;
