For clarity, separate courses and dates with a dot

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <h2>{{ page.title }}</h2>
-<p class="meta">{{ page.course }}, {{ page.date }}</p>
+<p class="meta">{{ page.course }} &middot; {{ page.date }}</p>
 
 {% if page.images %}
   {% for img in page.images %}
