--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link href="{{ site.baseurl }}assets/css/colorbox.css" rel="stylesheet">
     <link href="{{ site.baseurl }}assets/css/screen.css" rel="stylesheet">
     <script src="//use.edgefonts.net/source-sans-pro:n3,i3,n4,i4,n7,i7.js"></script>
     <title>{{ page.title }}</title>
@@ -67,5 +68,8 @@
       </footer>
     </div>
 
+    <script src="{{ site.baseurl }}assets/js/jquery-1.4.3.min.js"></script>
+    <script src="{{ site.baseurl }}assets/js/jquery.colorbox.js"></script>
+    <script src="{{ site.baseurl }}assets/js/portfolio.js"></script>
   </body>
 </html>
